# eigenda-py

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  fix_linting.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-pypi.yml  python-package.yml
docs/: ENVIRONMENT_VARIABLES.md  POETRY_GUIDE.md  UV_GUIDE.md  api-reference.md  getting-started.md
examples/: advanced_reservations.py  blob_retrieval_example.py  check_blob_status.py  check_existing_blob_status.py  check_payment_vault.py  debug_payment_state.py  demo_reservation.py  dispersal_with_retrieval_support.py  full_example.py  minimal_client.py  test_both_payments.py  test_reservation_account.py  test_with_proper_payment.py
protos/: README.md
scripts/: fix_grpc_imports.py  generate_grpc.py  verify_code_quality.sh
src/eigenda/: __init__.py  _version.py  client.py  client_v2.py  client_v2_full.py  config.py  payment.py  retriever.py
src/eigenda/auth/: __init__.py  signer.py
src/eigenda/codec/: __init__.py  blob_codec.py
src/eigenda/core/: __init__.py  meterer.py  types.py
src/eigenda/grpc/churner/: churner_pb2.py  churner_pb2_grpc.py
src/eigenda/grpc/common/: common_pb2.py  common_pb2_grpc.py
src/eigenda/grpc/common/v2/: common_v2_pb2.py  common_v2_pb2_grpc.py
src/eigenda/grpc/disperser/: disperser_pb2.py  disperser_pb2_grpc.py
src/eigenda/grpc/disperser/v2/: disperser_v2_pb2.py  disperser_v2_pb2_grpc.py
src/eigenda/grpc/encoder/: encoder_pb2.py  encoder_pb2_grpc.py
src/eigenda/grpc/encoder/v2/: encoder_v2_pb2.py  encoder_v2_pb2_grpc.py
src/eigenda/grpc/node/: node_pb2.py  node_pb2_grpc.py
src/eigenda/grpc/relay/: relay_pb2.py  relay_pb2_grpc.py
src/eigenda/grpc/retriever/: retriever_pb2.py  retriever_pb2_grpc.py
src/eigenda/grpc/retriever/v2/: retriever_v2_pb2.py  retriever_v2_pb2_grpc.py
src/eigenda/grpc/validator/: node_v2_pb2.py  node_v2_pb2_grpc.py
src/eigenda/utils/: __init__.py  abi_encoding.py  bn254_field.py  fp2_arithmetic.py  g2_decompression.py  gnark_decompression.py  serialization.py
tests/: test_bn254_field.py  test_client_v2.py  test_client_v2_additional.py  test_client_v2_final.py  test_client_v2_full.py  test_client_v2_full_additional_fixed.py  test_client_v2_full_final.py  test_client_v2_full_simple.py  test_client_v2_simple.py  test_codec.py  test_codec_complete.py  test_config.py  test_fp2_arithmetic.py  test_g2_decompression.py  test_g2_decompression_coverage.py  test_gnark_decompression_coverage.py  test_integration.py  test_integration_e2e.py  test_integration_grpc.py  test_integration_retriever.py  test_mock_client.py  test_payment.py  test_payment_100.py  test_payment_100_coverage.py  test_payment_complete.py  test_payment_exec_line42.py  test_payment_final_100.py  test_payment_force_100.py  test_payment_force_line42.py  test_payment_line42.py  test_reservation_parity.py  test_retriever.py  test_serialization.py  test_signer.py  test_types.py  test_types_complete.py
