[tool.poetry]
name = "eigenda-py"
version = "0.1.0"
description = "Python client for EigenDA v2 - decentralized data availability service"
authors = ["Swaroop Hegde <email@swaroophegde.com>"]
maintainers = ["Powerloom Team <hello@powerloom.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://powerloom.io/"
repository = "https://github.com/powerloom/eigenda-py"
documentation = "https://docs.eigencloud.xyz/products/eigenda/core-concepts/overview"
keywords = ["eigenda", "ethereum", "data-availability", "blockchain", "web3", "powerloom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Distributed Computing",
]
packages = [{include = "eigenda", from = "src"}]
include = ["src/eigenda/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
grpcio = ">=1.60.0"
grpcio-tools = ">=1.60.0"
protobuf = ">=4.25.0"
web3 = ">=6.0.0"
eth-account = ">=0.10.0"
eth-utils = ">=2.0.0"
eth-abi = {version = ">=4.0.0", python = ">=3.9,<4"}
eth-typing = ">=3.0.0"
cryptography = ">=41.0.0"
pycryptodome = ">=3.19.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.5.0"
types-protobuf = ">=4.24.0"
types-requests = ">=2.31.0"
flake8 = ">=6.0.0"
pylint = ">=3.0.0"
pre-commit = ">=3.0.0"
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=2.0.0"
autodoc-pydantic = {version = ">=2.0.0", python = ">=3.9,<4.0.0"}
jupyter = ">=1.0.0"
ipython = ">=8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.17"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
ignore_missing_imports = true
exclude = [
    'src/eigenda/grpc/.*_pb2.*\\.py$',
]

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=eigenda --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/eigenda"]
omit = [
    "*/grpc/*_pb2*.py",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pylint.messages_control]
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "R0913",
    "W0212",
]

[tool.pylint.format]
max-line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "src/eigenda/grpc/*_pb2*.py",
]

[tool.setuptools-scm]
version_scheme = "python-simplified-semver"
local_scheme = "node-and-timestamp"
