[metadata]
name = eigenda-py
version = attr: eigenda._version.__version__

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
eigenda = py.typed

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    src/eigenda/grpc/*_pb2*.py

[isort]
profile = black
line_length = 100

[mypy]
python_version = 3.9
strict = True
warn_return_any = True
warn_unused_configs = True
no_implicit_reexport = True
ignore_missing_imports = True

[mypy-grpc.*]
ignore_missing_imports = True

[mypy-google.protobuf.*]
ignore_missing_imports = True

[mypy-eigenda.grpc.*_pb2*]
ignore_errors = True